# fmus-embed

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: fmus-embedConfig.cmake  fmus_config.h.in
examples/: CMakeLists.txt  actuator_control.cpp  advanced_temperature_reading.cpp  blink_led.cpp  dsp_demo.cpp  read_pressure.cpp  read_temperature.cpp  traffic_light.cpp  uart_communication.cpp
include/fmus/: fmus.h  fmus_config.h
include/fmus/actuators/: actuators.h  motor.h  relay.h  servo.h
include/fmus/comms/: i2c.h  spi.h  uart.h
include/fmus/core/: error.h  logging.h  memory.h  result.h  version.h
include/fmus/dsp/: dsp.h  fft.h  filter.h
include/fmus/gpio/: gpio.h
include/fmus/mcu/: adc.h  gpio.h  platform.h  timer.h
include/fmus/sensors/: accelerometer.h  gyroscope.h  light.h  pressure.h  sensor.h  temperature.h
src/: CMakeLists.txt  fmus.cpp
src/actuators/: actuators.cpp  motor.cpp  relay.cpp  servo.cpp
src/comms/: CMakeLists.txt  i2c.cpp  spi.cpp  uart.cpp
src/core/: CMakeLists.txt  error.cpp  logging.cpp  memory.cpp  version.cpp
src/dsp/: dsp.cpp  fft.cpp  filter.cpp
src/gpio/: CMakeLists.txt  gpio.cpp
src/mcu/: CMakeLists.txt  adc.cpp  gpio.cpp  platform.cpp  timer.cpp
src/sensors/: CMakeLists.txt  accelerometer.cpp  gyroscope.cpp  light.cpp  pressure.cpp  temperature.cpp
tests/: CMakeLists.txt
tests/actuators/: motor_test.cpp  relay_test.cpp  servo_test.cpp
tests/ai/: neural_net_test.cpp  pid_test.cpp
tests/comms/: i2c_test.cpp  spi_test.cpp  uart_test.cpp
tests/core/: error_test.cpp  logging_test.cpp  memory_test.cpp  result_test.cpp
tests/dsp/: fft_test.cpp  filter_test.cpp
tests/gpio/: CMakeLists.txt  gpio_test.cpp
tests/mcu/: adc_test.cpp  gpio_test.cpp  platform_test.cpp  timer_test.cpp
tests/sensors/: accelerometer_test.cpp  gyroscope_test.cpp  light_test.cpp  pressure_test.cpp  sensor_base_test.cpp  temperature_test.cpp
